--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         </div>
         <p id="Keep_me_in_the_loop_1">
-        It’s early, and we’re hiring. Come with us...<br />
+        It’s early, and we’re hiring. Come with us... <a style="display:none;" href="mailto:a2V2aW5AYnJhdmUuaW8=">E-mail Us</a><br />
         </p>
         <p id="Keep_me_in_the_loop_2">
         &copy;2015 Brave Software<br />
