--- a/index.html
+++ b/index.html
@@ -3,54 +3,54 @@
 
     <head>
 	<link rel="stylesheet" href="boilerplate.css">
-	<link rel="stylesheet" href="page 1.css">
+	<link rel="stylesheet" href="stylesheet.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
     </head>
     <body>
+        <div id="container" class="clearfix">
+            <div id="panel">
+                <h1>brave<span class="muted">software</span></h1>
+                <h2>
+                     Get ready for a
+                     <ul>
+                        <li>safer</li>
+                        <li>faster</li>
+                        <li>cleaner</li>
+                        <li>better</li>
+                     </ul>
+                     internet.
+                </h2>
+                <p class="description">Brave Software is currently operating under the radar. For a<Br>bit more information or to discuss the internet of the future,<br>give us a shout.</p>
 
-    <div id="primaryContainer" class="primaryContainer clearfix">
-        <div id="box" class="clearfix">
-        </div>
-        <div id="box1" class="clearfix">
-            <p id="text">
-            Brave<span id="textspan">software</span>
-            </p>
-            <p id="text1">
-            <span id="textspan1">Ge</span><span id="textspan2">t ready for a &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; internet.<br /><br /></span><span id="textspan3"><br /><br /><br /></span><span id="textspan4"><br /><br /><br /><br /><br /><br /></span><span id="textspan5">Brave Software is currently operating under the radar. For a bit more information or to discuss the internet of the future, give us a shout.</span><br />
-            </p>
-            <div id="box2" class="clearfix">
-                <p id="text2">
-                <span id="textspan6">√</span><span id="textspan7"> </span><span id="textspan8">safer</span><span id="textspan9"><br /></span><span id="textspan10">√</span><span id="textspan11">&nbsp;faster</span><span id="textspan12"><br /></span><span id="textspan13">√</span><span id="textspan14">&nbsp;</span><span id="textspan15">cleaner</span><span id="textspan16"><br /></span><span id="textspan17">√</span><span id="textspan18">&nbsp;</span><span id="textspan19">better</span>
-                </p>
-            </div>
-
-            <!-- Begin MailChimp Signup Form -->
-            <div id="mailchimp-form">
-            <form action="//brave.us11.list-manage.com/subscribe/post?u=bc970601c83256047af4b8359&amp;id=cb26574db7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-                <div id="mc_embed_signup_scroll">
-            <div class="mc-field-group">
-                <label for="mce-EMAIL">Keep me in the loop...</label>
-                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address">
-            </div>
-                <div id="mce-responses" class="clear">
-                    <div class="response" id="mce-error-response" style="display:none"></div>
-                    <div class="response" id="mce-success-response" style="display:none"></div>
-                </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                <div style="position: absolute; left: -5000px;"><input type="text" name="b_bc970601c83256047af4b8359_cb26574db7" tabindex="-1" value=""></div>
-                <div class="clear"><input type="submit" value="thanks" name="subscribe" id="mc-embedded-subscribe" class="button subscribe"></div>
+                <!-- Begin MailChimp Signup Form -->
+                <div id="mailchimp-form">
+                <form action="//brave.us11.list-manage.com/subscribe/post?u=bc970601c83256047af4b8359&amp;id=cb26574db7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                    <div id="mc_embed_signup_scroll">
+                <div class="mc-field-group">
+                    <label for="mce-EMAIL">Keep me in the loop...</label>
+                    <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address">
+                    <input type="submit" value="thanks" name="subscribe" id="mc-embedded-subscribe" class="button subscribe">
                 </div>
-            </form>
-            </div>
-            <!--End MailChimp Signup Form-->
+                    <div id="mce-responses" class="clear">
+                        <div class="response" id="mce-error-response" style="display:none"></div>
+                        <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;"><input type="text" name="b_bc970601c83256047af4b8359_cb26574db7" tabindex="-1" value=""></div>
+                    </div>
+                </form>
+                </div>
+                <!--End MailChimp Signup Form-->
 
+            </div>
         </div>
-        <p id="Keep_me_in_the_loop_1">
-        It’s early, and we’re hiring. Come with us... <a style="display:none;" href="mailto:a2V2aW5AYnJhdmUuaW8=">E-mail Us</a><br />
-        </p>
-        <p id="Keep_me_in_the_loop_2">
-        &copy;2015 Brave Software<br />
-        </p>
-    </div>
+        <footer>
+            <span class="left">
+                &copy;2015 Brave Software
+            </span>
+            <span class="right">
+                It’s early, and we’re hiring. Come with us... <a style="display:none;" href="mailto:a2V2aW5AYnJhdmUuaW8=">E-mail Us</a>
+            </span>
+        </footer>
     </body>
 </html>
