Better description wrapping.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                      </ul>
                      internet.
                 </h2>
-                <p class="description">Brave Software is currently operating under the radar. For a<Br>bit more information or to discuss the internet of the future,<br>give us a shout.</p>
+                <p class="description">Brave Software is currently operating under the radar. For a bit more information or to discuss the internet of the future, give us a shout.</p>
 
                 <!-- Begin MailChimp Signup Form -->
                 <div id="mailchimp-form">
