Basic responsive handling for small screens.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                         <li>cleaner</li>
                         <li>better</li>
                      </ul>
+                     <span class="responsive">safer, faster, better</span>
                      internet.
                 </h2>
                 <p class="description">Brave Software is currently operating under the radar. For a bit more information or to discuss the internet of the future, give us a shout.</p>
