readjusted CSS for responsive needs, fixed weird scroll issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                      <span class="responsive">safer, faster, better</span>
                      internet.
                 </h2>
-                <p class="description">Brave Software is currently operating under the radar. For a bit more information or to discuss the internet of the future, give us a shout.</p>
+                <p class="description">Brave Software is currently operating under the radar. For a bit more information or to discuss the internet of the future, give us a <a href="mailto:info@brave.io">shout</a>.</p>
 
                 <!-- Begin MailChimp Signup Form -->
                 <div id="mailchimp-form">
@@ -47,8 +47,8 @@
         </div>
         <footer>
             <span class="left">
-                &copy;2015 Brave Software
-            </span>
+                &copy;2015 Brave Software Inc.
+          </span>
             <span class="right">
                 It’s early, and we’re hiring. Come with us... <a style="display:none;" href="mailto:a2V2aW5AYnJhdmUuaW8=">E-mail Us</a>
             </span>
