Remove hidden e-mail address.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 &copy;2015 Brave Software Inc.
           </span>
             <span class="right">
-                It’s early, and we’re hiring. Come with us... <a style="display:none;" href="mailto:a2V2aW5AYnJhdmUuaW8=">E-mail Us</a>
+                It’s early, and we’re hiring. Come with us...
             </span>
         </footer>
     </body>
