--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,11 @@
 <html>
 
     <head>
-	<link rel="stylesheet" href="boilerplate.css">
-	<link rel="stylesheet" href="stylesheet.css">
-	<meta charset="utf-8">
-	<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
+        <link rel="stylesheet" href="boilerplate.css">
+        <link rel="stylesheet" href="stylesheet.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
+        <title>Brave Software</title>
     </head>
     <body>
         <div id="container" class="clearfix">
