Hide hiring text for now.

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
             <span class="left">
                 &copy;2015 Brave Software Inc.
           </span>
-            <span class="right">
+            <span class="right" style="display:none;">
                 It’s early, and we’re hiring. Come with us...
             </span>
         </footer>
