Add google-site-verification code

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="stylesheet.css">
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
+        <meta name="google-site-verification" content="JCFZotwjwfKg5w4jCm0MQOsi5FQYSqxUcuUnJS2sxxY" />
         <title>Brave Software</title>
     </head>
     <body>
