Convert e-mail form to inline form.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
         <meta name="google-site-verification" content="JCFZotwjwfKg5w4jCm0MQOsi5FQYSqxUcuUnJS2sxxY" />
         <title>Brave Software</title>
+        <script type="text/javascript" src="js/jquery.js" defer></script>
+        <script type="text/javascript" src="js/app.js" defer></script>
     </head>
     <body>
         <div id="container" class="clearfix">
