Update e-mail address.

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
                      <span class="responsive">safer, faster, better</span>
                      internet.
                 </h2>
-                <p class="description">Brave Software is currently operating under the radar. For a bit more information or to discuss the internet of the future, give us a <a href="mailto:info@brave.io">shout</a>.</p>
+                <p class="description">Brave Software is currently operating under the radar. For a bit more information or to discuss the internet of the future, give us a <a href="mailto:support@brave.com">shout</a>.</p>
 
                 <!-- Begin MailChimp Signup Form -->
                 <div id="mailchimp-form">
