--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <body>
         <div id="container" class="clearfix">
             <div id="panel">
-                <h1>brave<span class="muted">software</span></h1>
+                <h1>Brave Software</h1>
                 <h2>
                      Get ready for a
                      <ul>
