submit -> sign up

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
                 <div class="mc-field-group">
                     <label for="mce-EMAIL">Keep me in the loop...</label>
                     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address">
-                    <input type="submit" value="submit" name="subscribe" id="mc-embedded-subscribe" class="button subscribe">
+                    <input type="submit" value="sign up" name="subscribe" id="mc-embedded-subscribe" class="button subscribe">
                 </div>
                     <div id="mce-responses" class="clear">
                         <div class="response" id="mce-error-response" style="display:none"></div>
