Try setting width in viewport to fix most mobile problems.

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
         <link rel="stylesheet" href="boilerplate.css">
         <link rel="stylesheet" href="stylesheet.css">
         <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0">
+        <meta name="viewport" content="width=480">
+
         <meta name="google-site-verification" content="JCFZotwjwfKg5w4jCm0MQOsi5FQYSqxUcuUnJS2sxxY" />
         <title>Brave Software</title>
         <script type="text/javascript" src="js/jquery.js" defer></script>
