Add Facebook share meta tag. Fixes #1
Brad did this fix, I'm just using his stuff here.

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="stylesheet.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=480">
-
+        <meta property="og:image" content="http://www.brave.com/img/bravesoftware_logotype.png"/>
+        <meta property="og:image:secure_url" content="https://www.brave.com/img/bravesoftware_logotype.png" />
         <meta name="google-site-verification" content="JCFZotwjwfKg5w4jCm0MQOsi5FQYSqxUcuUnJS2sxxY" />
         <title>Brave Software</title>
         <script type="text/javascript" src="js/jquery.js" defer></script>
