last try for FB meta fix

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
         <meta name="viewport" content="width=480">
 
         <meta name="google-site-verification" content="JCFZotwjwfKg5w4jCm0MQOsi5FQYSqxUcuUnJS2sxxY" />
+	<meta property="og:image" content="http://www.brave.com/img/bravesoftware_logotype.png"/>
+    	<meta property="og:image:secure_url" content="https://www.brave.com/img/bravesoftware_logotype.png">
         <title>Brave Software</title>
         <script type="text/javascript" src="js/jquery.js" defer></script>
         <script type="text/javascript" src="js/app.js" defer></script>
