fixed spelling error in index page

--- a/public/testing_server/testpage_011316.html
+++ b/public/testing_server/testpage_011316.html
@@ -185,7 +185,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             data-start="2000"
                             data-easing="Back.easeInOut"
                             data-endspeed="300">
-                         Browse the web at lightening speeds
+                         Browse the web at lightning speeds
                         </div>
 
                         <!-- LAYER -->
