--- a/public/8675309_NBWS/testpage_newslider.html
+++ b/public/8675309_NBWS/testpage_newslider.html
@@ -128,7 +128,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                         slideoutdirection : bottom; 
                                         durationin : 1000; 
                                         durationout : 1000; ">
-               Its your device. Its your time. <BR>So make it your internet.
+               It's your device. It's your time. <BR>So make it your internet.
             </span>
             
              <span class="ls-s-1" style=" color: #ffffff; 
@@ -342,7 +342,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="about-image bg-grey">
             <div class="container">
                 <div class="title-v1">
-                    <h1>It's amazing how <a class="cbp-lightbox" data-title="Brave is Faster" href="http://www.youtube.com/watch?v=NZSnwZSiIK4&rel=0&autoplay=1">fast</a> a page loads when you strip away <BR>everything but the real content. </h1>
+                    <h1>It's amazing how <a class="cbp-lightbox" data-title="Brave is Faster" href="http://www.youtube.com/watch?v=kHWf6hRV-GM?rel=0&autoplay=1">fast</a> a page loads when you strip away <BR>everything but the real content. </h1>
                     <p>Up to a whopping 60% of page load time is caused by the underlying and invisible ad technology that loads <BR>into various places each time you hit a page on your favorite news site.<BR> And 20% of this is time spent on loading things that are trying to learn more about you.  <br>
                    </p>
                 </div>
@@ -733,34 +733,6 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 -->
 
 
-<!--
-        <ul class="list-unstyled row portfolio-box-v1">
-            <li class="col-sm-4">
-                <img class="img-responsive" src="assets/img/mockup/img1.jpg" alt="">
-                <div class="portfolio-box-v1-in">
-                    <h3>Collective Package</h3>
-                    <p>Web Design, Mock-up</p>
-                    <a class="btn-u btn-u-sm btn-brd btn-brd-hover btn-u-light" href="#">Read More</a>
-                </div>
-            </li>
-            <li class="col-sm-4">
-                <img class="img-responsive" src="assets/img/mockup/img2.jpg" alt="">
-                <div class="portfolio-box-v1-in">
-                    <h3>Ahola Company</h3>
-                    <p>Brand Design, UI</p>
-                    <a class="btn-u btn-u-sm btn-brd btn-brd-hover btn-u-light" href="#">Read More</a>
-                </div>
-            </li>
-            <li class="col-sm-4">
-                <img class="img-responsive" src="assets/img/mockup/img4.jpg" alt="">
-                <div class="portfolio-box-v1-in">
-                    <h3>Allan Project</h3>
-                    <p>Web Development, HTML5</p>
-                    <a class="btn-u btn-u-sm btn-brd btn-brd-hover btn-u-light" href="#">Read More</a>
-                </div>
-            </li>
-        </ul>
--->
 
       
     </section>
