more text corrections

--- a/public/8675309_NBWS/testpage_newslider.html
+++ b/public/8675309_NBWS/testpage_newslider.html
@@ -128,7 +128,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                         slideoutdirection : bottom; 
                                         durationin : 1000; 
                                         durationout : 1000; ">
-               It's your device. It's your time. <BR>So make it your internet.
+               It's your device. It's your time. <BR>So make it your Internet.
             </span>
             
              <span class="ls-s-1" style=" color: #ffffff; 
@@ -140,9 +140,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                                          slideoutdirection : bottom; 
                                          durationin : 1000; 
                                          durationout : 1000; ">
-                 Brave blocks all the greed and ugliness on the web that slows you down <BR> 
+                 Brave blocks all the greed and ugliness on the Web that slows you down <BR> 
                  and invades your privacy. Then we put clean ads back, to support site <BR>
-                 owners and keep the internet free. <BR><BR>Join Brave and make it our internet.
+                 owners and keep the Internet free. <BR><BR>Join Brave and make it our Internet.
             </span>
 
             <a class="btn-u btn-u-black ls-s-1" href="#" style=" 
