Add social icons for team members
Auditors: @bradleyrichter

--- a/public/8675309_NBWS/testpage_newslider.html
+++ b/public/8675309_NBWS/testpage_newslider.html
@@ -515,9 +515,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/brendan.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                                <li><a href="https://twitter.com/BrendanEich" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
+                                <li><a href="https://brendaneich.com/" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-globe"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/brendaneich" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
                             </ul>
                         </div>
                         <h3>Brendan Eich</h3>
@@ -529,9 +529,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/brianb.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                                <li><a href="https://twitter.com/brianbondy" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
+                                <li><a href="http://www.brianbondy.com" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-globe"></i></a></li>
+                                <li><a href="https://github.com/bbondy/" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
                             </ul>
                         </div>
                         <h3>Brian Bondy</h3>
@@ -543,9 +543,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/brad.jpg" alt="">
                             <ul>
-                                <li><a href="http://www.bradrichter.co" target=_blank><i class="icon-custom icon-sm rounded-x fa fa-globe"></i></a></li>
-                                <li><a href="https://www.linkedin.com/in/richterbrad" target=_blank><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                                <li><a href="http://www.bradrichter.co" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-globe"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/richterbrad" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
+                                <li><a href="http://github.com/bradleyrichter" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
                             </ul>
                         </div>
                         <h3>Brad Richter</h3>
@@ -557,9 +557,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/elissa.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                                <li><a href="https://twitter.com/ElissaBeth" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
+                                <li><a href="http://elissashevinsky.com/" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-globe"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/elissashevinsky" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
                             </ul>
                         </div>
                         <h3>Elissa Shevinsky</h3>
@@ -579,9 +579,10 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/marshall.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                              
+                                <li><a href="https://twitter.com/_mtr" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
+                                <li><a href="https://en.wikipedia.org/wiki/Marshall_Rose" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-globe"></i></a></li>
+                                <li><a href="https://github.com/mrose17" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
                             </ul>
                         </div>
                         <h3>Marshall Rose</h3>
@@ -593,9 +594,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/yan.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                                <li><a href="https://twitter.com/bcrypt" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
+                                <li><a href="https://zyan.scripts.mit.edu/blog/" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-globe"></i></a></li>
+                                <li><a href="https://github.com/diracdeltas" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
                             </ul>
                         </div>
                         <h3>Yan Zhu</h3>
@@ -607,9 +608,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/garvan2.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                                <li><a href="https://twitter.com/garvankeeley" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
+                                <li><a href="https://github.com/garvankeeley" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/garvan-keeley-803256" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
                             </ul>
                         </div>
                         <h3>Garvan Keeley</h3>
@@ -621,9 +622,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/aubrey.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                                <li><a href="https://twitter.com/aekeus" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
+                                <li><a href="http://narrativeforms.com/" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-globe"></i></a></li>
+                                <li><a href="https://github.com/aekeus" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
                             </ul>
                         </div>
                         <h3>Aubrey Keus</h3>
@@ -644,9 +645,8 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/serg.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                                <li><a href="https://twitter.com/SergZh_" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
+                                <li><a href="https://github.com/SergeyZhukovsky/" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
                             </ul>
                         </div>
                         <h3>Sergey Zhukovsky</h3>
@@ -658,9 +658,9 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <div class="team-img">
                             <img class="img-responsive" src="assets/img/team/brianj.jpg" alt="">
                             <ul>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
-                                <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                                <li><a href="https://github.com/bridiver" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-github"></i></a></li>
+                                <li><a href="http://bridiver.blogspot.ca/" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-globe"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/brian-johnson-aaa11018" target="_blank"><i class="icon-custom icon-sm rounded-x fa fa-linkedin-square"></i></a></li>
                             </ul>
                         </div>
                         <h3>Brian Johnson</h3>
