mobile slide version

--- a/public/8675309_NBWS/testpage_011316.html
+++ b/public/8675309_NBWS/testpage_011316.html
@@ -71,7 +71,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div id="fullsize-menu" class="collapse navbar-collapse navbar-ex1-collapse">
+            <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <div class="menu-container">
                     <ul class="nav navbar-nav">
                         <li class="page-scroll home">
@@ -94,37 +94,6 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         
                         <li class="page-scroll">
                             <a href="#contact">Contact</a>
-                        </li>
-
-
-                    </ul>
-                </div>
-            </div>
-
-            <!-- secondary mobile version of our menu -->
-            <div id="tiny-menu" class="collapse navbar-collapse navbar-ex1-collapse">
-                <div class="menu-container">
-                    <ul class="nav navbar-nav">
-                        <li class="page-scroll home">
-                            <a href="#body">MOBILE MENU</a>
-                        </li>
-                        <li class="page-scroll">
-                            <a href="#faster">smaller</a>
-                        </li>
-                        <li class="page-scroll">
-                            <a href="#safer">more concise</a>
-                        </li>
-                            <li class="page-scroll">
-                            <a href="#news">fun</a>
-
-                        </li>
-                        <li class="page-scroll">
-                            <a href="#team">yay</a>
-
-                        </li>
-                        
-                        <li class="page-scroll">
-                            <a href="#contact">hello</a>
                         </li>
 
 
