Fixup HTTPS Everywhere text
Auditors: @bradleyrichter

--- a/public/8675309_NBWS/testpage_newslider.html
+++ b/public/8675309_NBWS/testpage_newslider.html
@@ -467,8 +467,8 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                     <div class="clearfix margin-bottom-30ser">
                         <i class="icon-custom icon-md rounded-x icon-bg-orange fa fa-random"></i>
                         <div class="content-boxes-in-v3">
-                            <h2 class="heading-sm">Brave redirects all sites to HTTPS</h2>
-                            <p>We've integrated HTTPS everywhere into every Brave browser to make sure you are always moving your bits across the safest possible secure pipe. </p>
+                            <h2 class="heading-sm">Brave redirects sites to HTTPS</h2>
+                            <p>We've integrated <a href="https://eff.org/https-everywhere" target="_blank">HTTPS Everywhere</a> into every Brave browser to make sure you are always moving your bits across the safest possible secure pipe. </p>
                         </div>
                     </div>
                     <div class="clearfix margin-bottom-30">
