--- a/public/index.html
+++ b/public/index.html
@@ -417,7 +417,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <i class="icon-custom rounded-x icon-bg-orange fa fa-shield"></i>
                         <div class="content-boxes-in-v3">
                             <h2 class="heading-sm">Browse Safer</h2>
-                            <p>Brave keeps you and your information safe, effectively shielding you from 3rd party tracking, fingerprinting and malice.</p>
+                            <p>Brave keeps you and your information safe, effectively shielding you from 3rd party tracking, fingerprinting and malvertisement.</p>
                         </div>
                     </div>
                     <div class="col-md-4">
