shorten profile info to one line

--- a/public/index.html
+++ b/public/index.html
@@ -691,7 +691,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             </ul>
                         </div>
                         <h3>Brian Johnson</h3>
-                        <h4>Senior Software Engineer, Privacy/Ad Technology</h4>
+                        <h4>Senior Software Engineer, Privacy/Ad Tech</h4>
                         <p></p>
                     </li>
 
