--- a/public/testpage_subscribe.html
+++ b/public/testpage_subscribe.html
@@ -904,17 +904,16 @@ Brave Headquarters is located in San Francisco, California.   </p><br>
             <div id="mc_embed_signup">
             <form action="https://brave.us11.list-manage.com/subscribe/post?u=bc970601c83256047af4b8359&amp;id=97bba1652f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
-                
             <div class="mc-field-group">
                 <label for="mce-EMAIL">Email Address </label>
                 <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
             </div>
             <div class="mc-field-group input-group">
-                <strong>Operating System </strong>
-                <ul><li><input type="radio" value="Android" name="USEROS" id="mce-USEROS-0"><label for="mce-USEROS-0">Android</label></li>
-            <li><input type="radio" value="OS X (mac)" name="USEROS" id="mce-USEROS-1"><label for="mce-USEROS-1">OS X (mac)</label></li>
-            <li><input type="radio" value="iOS" name="USEROS" id="mce-USEROS-2"><label for="mce-USEROS-2">iOS</label></li>
-            <li><input type="radio" value="Windows" name="USEROS" id="mce-USEROS-3"><label for="mce-USEROS-3">Windows</label></li>
+                <strong>Operationg System </strong>
+                <ul><li><input type="radio" value="Android" name="USEROS" id="mce-USEROS-0"><label for="mce-USEROS-0">&nbsp;Android</label></li>
+            <li><input type="radio" value="OS X (mac)" name="USEROS" id="mce-USEROS-1"><label for="mce-USEROS-1">&nbsp;OS X (mac)</label></li>
+            <li><input type="radio" value="iOS" name="USEROS" id="mce-USEROS-2"><label for="mce-USEROS-2">&nbsp;iOS</label></li>
+            <li><input type="radio" value="Windows" name="USEROS" id="mce-USEROS-3"><label for="mce-USEROS-3">&nbsp;Windows</label></li>
             </ul>
             </div>
                 <div id="mce-responses" class="clear">
@@ -926,7 +925,7 @@ Brave Headquarters is located in San Francisco, California.   </p><br>
                 </div>
             </form>
             </div>
-            <script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='USEROS';ftypes[3]='radio';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+            <script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[4]='USEROS';ftypes[4]='radio';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
             <!--End mc_embed_signup-->
           </div>
         </div>
