--- a/public/testpage_subscribe.html
+++ b/public/testpage_subscribe.html
@@ -891,7 +891,7 @@ Brave Headquarters is located in San Francisco, California.   </p><br>
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Be Brave, Get In Early</h4>
+            <h4 class="modal-title" id="myModalLabel">Be the First to Join Brave</h4>
           </div>
           <div class="modal-body">
             <!-- Begin MailChimp Signup Form -->
@@ -904,17 +904,20 @@ Brave Headquarters is located in San Francisco, California.   </p><br>
             <div id="mc_embed_signup">
             <form action="https://brave.us11.list-manage.com/subscribe/post?u=bc970601c83256047af4b8359&amp;id=97bba1652f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
+                
+            <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
             <div class="mc-field-group">
-                <label for="mce-EMAIL">Email Address </label>
+                <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+            </label>
                 <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
             </div>
-            <div class="mc-field-group input-group">
-                <strong>Operationg System </strong>
-                <ul><li><input type="radio" value="Android" name="USEROS" id="mce-USEROS-0"><label for="mce-USEROS-0">&nbsp;Android</label></li>
-            <li><input type="radio" value="OS X (mac)" name="USEROS" id="mce-USEROS-1"><label for="mce-USEROS-1">&nbsp;OS X (mac)</label></li>
-            <li><input type="radio" value="iOS" name="USEROS" id="mce-USEROS-2"><label for="mce-USEROS-2">&nbsp;iOS</label></li>
-            <li><input type="radio" value="Windows" name="USEROS" id="mce-USEROS-3"><label for="mce-USEROS-3">&nbsp;Windows</label></li>
-            </ul>
+            <div class="mc-field-group">
+                <label for="mce-FNAME">First Name </label>
+                <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+            </div>
+            <div class="mc-field-group">
+                <label for="mce-LNAME">Last Name </label>
+                <input type="text" value="" name="LNAME" class="" id="mce-LNAME">
             </div>
                 <div id="mce-responses" class="clear">
                     <div class="response" id="mce-error-response" style="display:none"></div>
@@ -925,7 +928,7 @@ Brave Headquarters is located in San Francisco, California.   </p><br>
                 </div>
             </form>
             </div>
-            <script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[4]='USEROS';ftypes[4]='radio';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+            <script type='text/javascript' src='https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
             <!--End mc_embed_signup-->
           </div>
         </div>
