Fix text with suggestions from me and brian johnson
Better to avoid accidentally exaggerating privacy/security claims.

--- a/public/index.html
+++ b/public/index.html
@@ -410,21 +410,21 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                         <i class="icon-custom rounded-x icon-bg-orange fa fa-rocket"></i>
                         <div class="content-boxes-in-v3">
                             <h2 class="heading-sm">Browse Faster</h2>
-                            <p>Brave blocks everything that can slow you down on the web. </p>
+                            <p>Brave blocks trackers and intrusive ads that can slow you down on the web.</p>
                         </div>
                     </div>
                     <div class="col-md-4 md-margin-bottom-30">
                         <i class="icon-custom rounded-x icon-bg-orange fa fa-shield"></i>
                         <div class="content-boxes-in-v3">
                             <h2 class="heading-sm">Browse Safer</h2>
-                            <p>Brave keeps you and your information safe, effectively shielding you from 3rd party tracking, fingerprinting and malvertisement.</p>
+                            <p>Brave keeps you and your information safer, effectively shielding you from 3rd party tracking and malvertisement.</p>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <i class="icon-custom rounded-x icon-bg-orange fa fa-btc"></i>
                         <div class="content-boxes-in-v3">
                             <h2 class="heading-sm">Browse Better</h2>
-                            <p>Let's face it, ads keep content free. Brave actually brings you better ads. </p>
+                            <p>With Brave, you can choose whether to see ads that respect your privacy or pay sites directly. Either way, you can feel good about helping fund content creators.</p>
                         </div>
                     </div>
                 </div>
@@ -437,7 +437,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <div class="container">
                 <div class="title-v1">
                     <h1>It's amazing how <a class="cbp-lightbox" data-title="Brave is Faster" href="http://www.youtube.com/watch?v=kHWf6hRV-GM?rel=0&autoplay=1">fast</a> a page loads when you strip away <BR>everything but the real content. </h1>
-                    <p>Up to a whopping 60% of page load time is caused by the underlying invisible ad technology that loads <BR>in various places each time you hit a page on your favorite news site.<BR> And 20% of this time is spent on loading things that are trying to learn more about you.  <br>
+                    <p>Up to a whopping 60% of page load time is caused by the underlying ad technology that loads <BR>in various places each time you hit a page on your favorite news site.<BR> And 20% of this time is spent on loading things that are trying to learn more about you.<br>
                    </p>
                 </div>
                 <div class="img-center">
