newsletter signup button in footer, add css classes

--- a/public/index.html
+++ b/public/index.html
@@ -900,7 +900,7 @@ Brave Headquarters is located in San Francisco, California.   </p><br>
                 <div class="mc-field-group">
                     <p>Keep me in the loop...</p>
                     <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address">
-                    <BR><BR><input type="submit" value="sign up" name="subscribe" id="mc-embedded-subscribe" class="button subscribe">
+                    <BR><BR><input type="submit" value="sign up" name="subscribe" id="mc-embedded-subscribe" class="button subscribe btn-u btn-u-black ls-s-1">
                 </div>
                     <div id="mce-responses" class="clear">
                         <div class="response" id="mce-error-response" style="display:none"></div>
