--- a/public/index.html
+++ b/public/index.html
@@ -469,7 +469,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                             <p>There's a new ad game in town. It's called "Malvertising". The latest display ad technology can install malware on your laptop without your knowledge. But not with Brave watching your back.</p>
                         </div>
                     </div>
-                    <div class="clearfix margin-bottom-30ser">
+                    <div class="clearfix margin-bottom-30">
                         <i class="icon-custom icon-md rounded-x icon-bg-orange fa fa-random"></i>
                         <div class="content-boxes-in-v3">
                             <h2 class="heading-sm">Brave redirects sites to HTTPS</h2>
