Fixed learn more link to scroll to correct location
Auditors: @bridiver

--- a/public/index.html
+++ b/public/index.html
@@ -233,7 +233,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                  <Strong>Join Brave and make it our Internet.</Strong>
             </span>
 
-            <a class="btn-u btn-u-black ls-s-1" href="#about" style=" 
+            <a class="btn-u btn-u-black ls-s-1 lean-more-button" href="#about" style=" 
                                         padding: 8px 18px; 
                                         font-size:18px; 
                                         top:440px; 
